@@ -8,6 +8,8 @@ THIS IS NOT YET A RELEASE!
 === Changes since 1.25.2 ===
 
 * (T98975) Fix having multiple callbacks for a single hook.
+* (T107632) maintenance/refreshLinks.php did not always remove all links
+  pointing to nonexistent pages.
 
 == MediaWiki 1.25.2 ==
 
